--- a/source/stylesheets/partials/_main.scss
+++ b/source/stylesheets/partials/_main.scss
@@ -8,6 +8,7 @@ html, body {
   @include pos(0, 0, 0, $sidebar-width + $sidebar-padding * 2);
   padding: 0 0 $sidebar-padding * 2;
   overflow-y: auto;
+  z-index: 5;
 
   .title {
     position: fixed;
