--- a/source/stylesheets/partials/_panel.scss
+++ b/source/stylesheets/partials/_panel.scss
@@ -10,7 +10,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 6;
 
   .windowcontrols {
     @if $web == true {
